Fixed Explore showing whitespaces

--- a/frontend/src/pages/Explore/styles.css
+++ b/frontend/src/pages/Explore/styles.css
@@ -1,3 +1,7 @@
+#explore > .page-content {
+    overflow: hidden;
+}
+
 .mapview {
     width: 100%;
     height: 100vh;
